--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a {
 
 
 header {
-    background-color: #FFF;
+    background-color: #254441;
     height: fit-content;
 }
 
@@ -82,7 +82,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    height: 1000px;
+    height: 500px;
     position: relative;
 }
 
@@ -91,10 +91,22 @@ header {
 .content3,
 .content4,
 .content5 {
-    background-color: #FFF;
-    height: 50%;
+    height: 100%;
     width: 19%;
     transition: 0.3s ease-in-out;
+    -webkit-box-shadow: 0px 0px 35px 5px rgba(20, 196, 255, 0.1);
+    box-shadow: 0px 0px 35px 5px rgba(20, 196, 255, 0.1);
+    overflow: hidden;
+}
+
+.content1{
+    border-top-left-radius: 10px ;
+    border-bottom-left-radius: 10px ;
+}
+
+.content5{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .content1:hover,
@@ -120,6 +132,14 @@ header {
     filter: blur(1px);
 }
 
+.gotm-bg{
+    background-color: #254441;
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    padding-bottom: 200px;
+    clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 91%);
+}
 
 
 /*--------------------------------------- Footer ---------------------------------------*/
