--- a/style.css
+++ b/style.css
@@ -303,3 +303,58 @@ footer {
     height: 200px;
     flex: 0 0 auto;
 }
+
+
+/*------------My shit------------*/
+
+.game-img-list {
+    list-style-type: none;
+    border-radius: 10px;
+    width: 304px;
+    height: 171px;
+    flex: 0 0 auto;
+}
+
+.list-game {
+    display: grid;
+    grid-template-columns: repeat(4 1fr);
+    grid-template-rows: repeat(5 1fr);
+    grid-column-gap: 107px;
+    grid-row-gap: 150px;
+}
+
+.case1 { grid-column: 1; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
+.case2 { grid-column: 2; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
+.case3 { grid-column: 3; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
+.case4 { grid-column: 4; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
+
+.project-item:hover .overlay {
+    bottom: 0;
+    height: 100%;
+  }
+
+  .overlay{
+    position: absolute;
+    bottom: 100%;
+    border-radius: 10px;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.6);
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+}
+
+.project-item {
+    background-color: transparent;
+    font-size: 30px;
+    text-align: center;
+    height: 171px;
+    width: 304px;
+    transition: 0.3s ease-in-out ;
+    box-shadow: 0px 0px 30px #6a6b6d;
+    overflow: hidden;
+    position: relative;
+    border-radius: 10px;
+}
