--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ footer {
 }
 
 .background-black {
-    background-color: black;
+    background-color: #254441;
     height: 100em;
 }
 
@@ -188,7 +188,7 @@ footer {
 }
 
 .game-title {
-    font-size: 100px;
+    font-size: 10em;
     margin: 0;
     color: #254441;
 
