--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ header {
 
 .inside {
     margin: 0 10% 0 10%;
-    height: 100%;
 }
 
 .content {
@@ -148,10 +147,45 @@ header {
 
 footer {
     background-color: #FAFAFA;
-    height: 50px;
 }
 
+.footer-collumns-container {
+    display: flex;
+    justify-content: space-between;
+    height: 10%;
+}
 
+.footer-collumn {
+width: 33.33%;
+display: flex;
+justify-content: center;
+}
+
+.footer-bottom{
+    margin: auto;
+    width: fit-content;
+    background-color: #FAFAFA;
+    height: 50px;
+    border-top: rgb(223, 223, 223) solid 1px;
+}
+
+.very-small-text{
+    font-size: 12px;
+}
+
+.social-icon{
+    height: 30px;
+    width: auto;
+    fill: #DB504A;
+    margin-left: 10px;
+}
+
+.socials{
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+}
 
 /*--------------------------------------- Page de jeu ---------------------------------------*/
 
