--- a/style.css
+++ b/style.css
@@ -80,9 +80,12 @@ header {
 .content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    height: 500px;
+    justify-content: space-between;
     position: relative;
+    height: 360px;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 22px;
+    border-radius: 10px;
 }
 
 .content1,
@@ -133,12 +136,77 @@ header {
 
 .gotm-bg{
     background-color: #254441;
+    background-image: url(img/hogwards-legacy.jpg);
     width: 100%;
-    height: 100%;
+    height: 460px;
     padding-top: 100px;
     padding-bottom: 200px;
     clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 91%);
 }
+
+.slider-container{
+    position: absolute;
+    z-index: 3;
+    top: 570px;
+}
+
+.game-slider {
+}
+
+
+
+/*--------------------------------------- Section des cartes des jeux ---------------------------------------*/
+.card-section-title{
+    font-size: 7em;
+    margin: 0;
+    color: #254441;
+}
+
+.card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.card {
+    width: 23.3em;
+    -webkit-box-shadow: 0px 0px 35px 5px rgba(20, 196, 255, 0.1);
+    box-shadow: 0px 0px 35px 5px rgba(20, 196, 255, 0.1);
+    height: auto;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 1.3em;
+}
+
+.card-img{
+    width: 100%;
+    height: 100%;
+}
+
+
+.card-containerv2{
+
+}
+
+
+.cardv2{
+    display: flex;
+    vertical-align: middle;
+}
+
+.cardv2img {
+    height: 100px;
+    width: 100px;
+    background-color: #DB504A;
+}
+
+.cardv2desc {
+    height: 120px;
+    width: 100px;
+    background-color: aqua;
+}
+
+
 
 
 /*--------------------------------------- Footer ---------------------------------------*/
