Ajout d'une deuxieme version des cartes de présentations des jeux de la semaine

--- a/style.css
+++ b/style.css
@@ -101,12 +101,12 @@ header {
     overflow: hidden;
 }
 
-.content1{
-    border-top-left-radius: 10px ;
-    border-bottom-left-radius: 10px ;
+.content1 {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
-.content5{
+.content5 {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -134,7 +134,7 @@ header {
     filter: blur(1px);
 }
 
-.gotm-bg{
+.gotm-bg {
     background-color: #254441;
     background-image: url(img/hogwards-legacy.jpg);
     width: 100%;
@@ -144,25 +144,24 @@ header {
     clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 91%);
 }
 
-.slider-container{
+.slider-container {
     position: absolute;
     z-index: 3;
     top: 570px;
 }
 
-.game-slider {
-}
+.game-slider {}
 
 
 
 /*--------------------------------------- Section des cartes des jeux ---------------------------------------*/
-.card-section-title{
+.card-section-title {
     font-size: 7em;
     margin: 0;
     color: #254441;
 }
 
-.card-container{
+.card-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -178,34 +177,65 @@ header {
     margin: 1.3em;
 }
 
-.card-img{
+.card-img {
     width: 100%;
     height: 100%;
 }
 
 
-.card-containerv2{
-
-}
+.card-containerv2 {}
 
 
-.cardv2{
+.cardv2 {
     display: flex;
-    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
+    position: relative;
 }
 
 .cardv2img {
-    height: 100px;
-    width: 100px;
-    background-color: #DB504A;
+    height: 190px;
+    width: 190px;
+    border-radius: 10px;
+    background-color: #FAFAFA;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    object-fit: cover;
+    object-position: 0;
+    z-index: 3;
 }
 
 .cardv2desc {
-    height: 120px;
-    width: 100px;
-    background-color: aqua;
+    height: 150px;
+    width: 80%;
+    border-radius: 0 10px 10px 0;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    background-color: #FAFAFA;
+    z-index: 2;
 }
 
+.cardv2rank {
+    width: 20%;
+    height: 5%;
+    position: absolute;
+    left: 143px;
+    top: 171px;
+    z-index: 1;
+    clip-path: polygon(0 0%, 100% 0, 96% 100%, 0 100%);
+
+}
+
+.cardv2:first-child>.cardv2rank {
+    background-color: #eb930f;
+}
+
+.cardv2:nth-child(2)>.cardv2rank {
+    background-color: #717171;
+}
+
+.cardv2:nth-child(3)>.cardv2rank {
+    background-color: #914300;
+}
 
 
 
@@ -224,12 +254,12 @@ footer {
 }
 
 .footer-collumn {
-width: 33.33%;
-display: flex;
-justify-content: center;
+    width: 33.33%;
+    display: flex;
+    justify-content: center;
 }
 
-.footer-bottom{
+.footer-bottom {
     margin: auto;
     width: fit-content;
     background-color: #FAFAFA;
@@ -237,18 +267,18 @@ justify-content: center;
     border-top: rgb(223, 223, 223) solid 1px;
 }
 
-.very-small-text{
+.very-small-text {
     font-size: 12px;
 }
 
-.social-icon{
+.social-icon {
     height: 30px;
     width: auto;
     fill: #DB504A;
     margin-left: 10px;
 }
 
-.socials{
+.socials {
     display: flex;
     align-items: center;
     height: 100%;
@@ -445,17 +475,44 @@ justify-content: center;
     grid-row-gap: 150px;
 }
 
-.case1 { grid-column: 1; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
-.case2 { grid-column: 2; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
-.case3 { grid-column: 3; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
-.case4 { grid-column: 4; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
+.case1 {
+    grid-column: 1;
+    grid-row: 2;
+    border-radius: 10px;
+    width: 304px;
+    height: 171px;
+}
+
+.case2 {
+    grid-column: 2;
+    grid-row: 2;
+    border-radius: 10px;
+    width: 304px;
+    height: 171px;
+}
+
+.case3 {
+    grid-column: 3;
+    grid-row: 2;
+    border-radius: 10px;
+    width: 304px;
+    height: 171px;
+}
+
+.case4 {
+    grid-column: 4;
+    grid-row: 2;
+    border-radius: 10px;
+    width: 304px;
+    height: 171px;
+}
 
 .project-item:hover .overlay {
     bottom: 0;
     height: 100%;
-  }
+}
 
-  .overlay{
+.overlay {
     position: absolute;
     bottom: 100%;
     border-radius: 10px;
@@ -474,7 +531,7 @@ justify-content: center;
     text-align: center;
     height: 171px;
     width: 304px;
-    transition: 0.3s ease-in-out ;
+    transition: 0.3s ease-in-out;
     box-shadow: 0px 0px 30px #6a6b6d;
     overflow: hidden;
     position: relative;
