--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ footer {
 }
 
 
-/*------------My shit------------*/
+/*--------------------------------My shit--------------------------------*/
 
 .game-img-list {
     list-style-type: none;
@@ -336,17 +336,14 @@ footer {
 }
 
 .list-game {
-    display: grid;
-    grid-template-columns: repeat(4 1fr);
-    grid-template-rows: repeat(5 1fr);
-    grid-column-gap: 107px;
+    display: flex;
+    flex-wrap: wrap;
+    grid-column-gap: 106px;
     grid-row-gap: 150px;
+    justify-content: center;
+    margin-top: 150px;
+    width: 80%;
 }
-
-.case1 { grid-column: 1; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
-.case2 { grid-column: 2; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
-.case3 { grid-column: 3; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
-.case4 { grid-column: 4; grid-row: 2; border-radius: 10px; width: 304px; height: 171px;}
 
 .project-item:hover .overlay {
     bottom: 0;
@@ -355,10 +352,9 @@ footer {
 
   .overlay{
     position: absolute;
+    margin: auto;
     bottom: 100%;
     border-radius: 10px;
-    left: 0;
-    right: 0;
     background-color: rgba(255, 255, 255, 0.6);
     overflow: hidden;
     width: 100%;
@@ -377,4 +373,16 @@ footer {
     overflow: hidden;
     position: relative;
     border-radius: 10px;
+}
+
+.separation {
+    display: flex;
+}
+
+.search {
+    width: 20%;
+    justify-content: center;
+    margin-top: 150px;
+    flex: 0 0 auto;
+    background-color: red;
 }
