--- a/style.css
+++ b/style.css
@@ -198,38 +198,33 @@ header {
     margin: 20px 0;
     position: relative;
     justify-content: center;
+    height: 229px;
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
 }
 
 .cardv2img {
-    height: 190px;
-    width: 190px;
+    width: 100%;
+    aspect-ratio: 1/1;
     border-radius: 10px;
-    background-color: #FAFAFA;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     object-fit: cover;
     object-position: 0;
-    z-index: 3;
+    margin-bottom: -4px;
 }
 
 .cardv2desc {
-    width: 100%;
-    height: 132px;
-    border-radius: 0 10px 10px 0;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    background-color: #FAFAFA;
-    z-index: 2;
-    padding: 10px;
-    margin-top: 20px;
-    transition: 0.3s ease-in-out;
 }
 
 .cardv2name {
     text-transform: uppercase;
     margin: 0;
+    font-weight: 600;
+    font-size: 30px;
 }
 
 .cardv2phrase {
-    font-size: 11px;
+    font-size: 14px;
+    height : 18%;
 }
 
 .cardV2RatingContainer {
@@ -245,8 +240,19 @@ header {
 }
 
 .cardV2RatingIcon {
-    width: 30%;
-    background-color: #254441;
+    aspect-ratio: 1/1;
+    border: black solid 5px;
+    border-radius: 100%;
+    position: relative;
+}
+.cardV2RatingIcon img{
+    aspect-ratio: 1/1;
+    height: 70%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%)
 }
 
 .cardV2RatingProgressBar {
@@ -264,7 +270,7 @@ header {
     height: 5%;
     position: absolute;
     left: 143px;
-    top: 171px;
+    top: 161px;
     z-index: 1;
     clip-path: polygon(0 0%, 100% 0, 96% 100%, 0 100%);
 
@@ -287,12 +293,74 @@ header {
 /* - Test - */
 
 
-.cardV2RatingTabBtn:hover{
-    cursor:pointer;
+.cardV2RatingTabBtn:hover {
+    cursor: pointer;
 }
 
-.open{
+.card-active {
     height: 500px;
+}
+
+.card-left {
+    width: 23%;
+    z-index: 3;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    background-color: #aaaaaa;
+}
+
+.card-right {
+    width: 85%;
+    z-index: 2;
+
+    height: 76%;
+    border-radius: 0 10px 10px 0;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+    background-color: #FAFAFA;
+    padding: 10px;
+    margin: auto 10% auto auto;
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
+}
+
+.display-block {
+    display: block;
+}
+
+.card-left img {
+    z-index: 9;
+    position: relative ;
+}
+
+.cardrating20{
+    position: absolute;
+    z-index: 5;
+    width: 240px;
+    top: 54%;
+    left: 0;
+}
+
+.rating:first-child{
+    border-bottom: 1px solid #fff;
+}
+
+.rating{
+    margin: 0;
+    font-size: 50px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.cardrating20in{
+    text-align: center;
+    width: 35%;
+    display: block;
+    margin: auto;
+    background-color: #254441;
+    border-radius: 10px;
+    padding: 10px;
+
 }
 
 /*--------------------------------------- Footer ---------------------------------------*/
