--- a/style.css
+++ b/style.css
@@ -16,6 +16,18 @@ a {
 }
 
 
+.red {
+    background-color: #DB504A;
+}
+
+.orange {
+    background-color: #eb930f;
+}
+
+.green {
+    background-color: limegreen;
+}
+
 
 /*--------------------------------------- Header ---------------------------------------*/
 
@@ -235,17 +247,18 @@ header {
     width: 28%;
     display: flex;
     padding: 10px;
+    border-radius: 10px;
 }
 
 .cardV2RatingIcon {
     aspect-ratio: 1/1;
-    border: solid 2px black;
     background-color: white;
-    border-radius: 100%;
+    border-radius: 100% 0 0 100%;
     position: absolute;
-    height: 53px;
+    height: 57px;
     z-index: 10;
     margin: 0;
+    overflow: hidden;
 }
 
 .cardV2RatingIcon img {
@@ -258,20 +271,39 @@ header {
     transform: translate(-50%, -50%)
 }
 
+.cardRatingIconBg {
+    width: 60px;
+    aspect-ratio: 1/1;
+    border-radius: 100px 0 0 100px;
+}
+
 .cardV2RatingProgressBar {
     width: 100%;
-    position: relative;
+    display: flex;
     border-radius: 100px;
-    border: solid 2px black;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px;
+    background-color: whitesmoke;
+}
+
+.cardRatingBarHolder {
+    width: 100%;
+    height: 100%;
 }
 
 .cardV2RatingBar {
-    width: 50%;
+    width: 0%;
     height: 100%;
-    position: absolute;
-    left: 30px;
+    display: block;
     border-radius: 0 100px 100px 0;
-    background-color: #F15A24;
+    position: relative;
+}
+
+.cardV2RatingPourcentage {
+    color: #fff;
+    font-weight: 800;
+    right: 10%;
+    top: 4%;
+    position: absolute;
 }
 
 .cardV2RatingTabBtn {
