--- a/style.css
+++ b/style.css
@@ -242,9 +242,6 @@ header {
 }
 
 
-.card-containerv2 {}
-
-
 .cardv2 {
     display: flex;
     margin: 20px 0;
@@ -266,13 +263,17 @@ header {
     margin-bottom: -4px;
 }
 
-.cardv2desc {}
+.cardv2name {}
 
-.cardv2name {
+.cardv2name h3 {
     text-transform: uppercase;
     margin: 0;
     font-weight: 600;
     font-size: 30px;
+}
+
+.cardv2name p {
+    margin: 0;
 }
 
 .cardv2phrase {
@@ -924,3 +925,23 @@ button:active {
     text-align: center;
     margin-bottom: 20px;
 }
+
+
+/*------------Page de jeux----------*/
+
+.gamesFirstImages {
+    width: 100%;
+    height: auto;
+    z-index: 0;
+    filter: blur(1px);
+    filter: brightness(0.5);
+}
+
+.gamesDetails {
+    width: 100%;
+    height: 500px;
+    margin: -30px 0 0 0;
+
+}
+
+.gamesPages {}
