--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ header {
     padding: 0 20px;
     position: relative;
     justify-content: center;
-    height: 229px;
+    height: 232px;
     transition: 0.5s ease-in-out;
     overflow: hidden;
 }
@@ -263,17 +263,55 @@ header {
     margin-bottom: -4px;
 }
 
-.cardv2name {}
+.cardv2name {
+    display: flex;
+}
 
 .cardv2name h3 {
     text-transform: uppercase;
     margin: 0;
     font-weight: 600;
     font-size: 30px;
+    width: 50%;
 }
 
 .cardv2name p {
     margin: 0;
+    min-width: 20px;
+    color: #fff;
+    font-weight: 600;
+    text-align: center;
+}
+
+.cardv2name img {
+    height: 20px;
+    width: auto;
+    aspect-ratio: 1/1;
+}
+
+.gamePlatform {}
+
+.gameLi {
+    list-style: none;
+    margin-left: 2%;
+    height: 19px;
+    width: auto;
+    min-width: 19px;
+    margin: 0;
+    background-color: #254441;
+    border-radius: 100px;
+    color: #fff;
+    font-weight: 600;
+    text-align: center;
+    padding: 10px;
+    margin-left: 1%;
+    box-shadow: rgba(17, 17, 26, 0.2) 0px 4px 4px
+}
+
+.cardGameDetails {
+    display: flex;
+    justify-content: end;
+    width: 50%;
 }
 
 .cardv2phrase {
@@ -436,7 +474,7 @@ header {
     height: 95%;
     border-radius: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    background-color: #6a6b6d
+    background-color: #f3f3f3
 }
 
 .card-right {
@@ -465,8 +503,8 @@ header {
     position: absolute;
     z-index: 5;
     width: 21%;
-    top: 54%;
-    left: -10px;
+    top: 45%;
+    left: -1.5%;
 }
 
 .rating:first-child {
@@ -945,3 +983,69 @@ button:active {
 }
 
 .gamesPages {}
+
+
+/*------------Page de jeux----------*/
+
+.warningMessage {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.warningMessage img {
+    width: 25%;
+    height: 50%;
+}
+
+.warningMessage p {
+    font-size: 60px;
+    font-weight: 900;
+    color: #c5c5c5;
+    height: 20%;
+}
+
+.textReplacer {
+    display: block;
+    height: 1em;
+    width: 100%;
+    background-color: #dfdfdf;
+    border-radius: 100px;
+    margin-top: 10px;
+    animation: placeholderOpacity 3s;
+    animation-iteration-count: 10000;
+}
+
+.cardPlaceholderIcon img {
+    top: 55%;
+    left: 53%;
+    animation: placeholderOpacity 3s;
+    animation-iteration-count: 10000;
+}
+
+.cardPlaceholderImg img {
+    height: 119%;
+    width: 100%;
+    animation: placeholderOpacity 3s;
+    animation-iteration-count: 10000;
+}
+
+@keyframes placeholderOpacity {
+    0% {
+        opacity: 0;
+    }
+
+    40% {
+        opacity: 100;
+    }
+
+    60% {
+        opacity: 99;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
